Transfer latest edits from google drive (reverse CVs plus minor fixes)

--- a/fitness.html
+++ b/fitness.html
@@ -122,14 +122,14 @@
                                 <p>
                                     Wir werden Ihnen alle Geräte vorstellen und zusammen ein Trainingsprogramm
                                     ausarbeiten. Nebst diesem Einführungstraining sind zwei Coachings im Abo-Preis
-                                    einbegriffen.
+                                    inbegriffen.
                                 </p>
                                 <p>
                                     Auf die Preise gewähren wir folgende Rabatte:
                                 </p>
                                 <ul>
-                                    <li>Personen im gleichen Haushalt: 10%<br/></li>
-                                    <li>Studierende/Lehrlinge bis 25 Jahre: 10%<br/></li>
+                                    <li>Personen im gleichen Haushalt (gegen Vorweisen eines Ausweises): 10%<br/></li>
+                                    <li>Studierende/Lehrlinge bis 25 Jahre (gegen Vorweisen eines Ausweises): 10%<br/></li>
                                     <li>Nahtlose Erneuerung: Fr. 20.– Reduktion</li>
                                 </ul>
                             </div>
