--- a/melina-duerr.html
+++ b/melina-duerr.html
@@ -122,28 +122,33 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">5 Jahre</div>
-        <div class="col-xs-9">
-            Kantonsspital Bruderholz mit Schwerpunkt Rückenrehabilitation, Orthopädie, Traumatologie,
-            Rheumatologie.<br/>
-            Fachbereichsverantwortung Rückenrehabilitation, Stv. Leitung gesamte Rehabilitation.
-        </div>
+        <div class="col-lg-2 col-xs-3">seit 2016</div>
+        <div class="col-xs-9">Mitinhaberin Movimento Physio- und Trainingstherapie GmbH, Oberdorf</div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">4 Jahre</div>
-        <div class="col-xs-9">
-            Berufsausübung in Privatpraxen mit Schwerpunkt Orthopädie, Traumatologie, Rheumatologie
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">3 Jahre</div>
+        <div class="col-lg-2 col-xs-3">2013-2016</div>
         <div class="col-xs-9">
             Selbständige Tätigkeit in Niederdorf
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">seit 2016</div>
-        <div class="col-xs-9">Mitinhaberin Movimento Physio-und Trainingstherapie GmbH, Oberdorf</div>
+        <div class="col-lg-2 col-xs-3">2009-2013</div>
+        <div class="col-xs-9">
+            Tätigkeit in Privatpraxen mit Schwerpunkt Orthopädie, Traumatologie, Rheumatologie
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">2004-2009</div>
+        <div class="col-xs-9">
+            Kantonsspital Bruderholz mit Schwerpunkt Rückenrehabilitation, Orthopädie, Traumatologie, Rheumatologie.
+            Fachbereichsverantwortung Rückenrehabilitation, Stv. Leitung gesamte Rehabilitation.
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">2003</div>
+        <div class="col-xs-9">
+            Temporäre Tätigkeit Kantonsspital Laufen und in Privatpraxis
+        </div>
     </div>
     <div class="row section">
         <div class="col-xs-12">
@@ -151,12 +156,16 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-12">Diplom Physiotherapie Bethesda-Spital, Basel 2003</div>
-        <div class="col-xs-12">Zusatzausbildung in Manueller Therapie Maitland Konzept, Level 3</div>
-        <div class="col-xs-12">Zusatzausbildung ESP Sportphysiotherapie</div>
-        <div class="col-xs-12">ESP-Themenkurs Training bei Diabetes, Übergewicht, Stoffwechselerkrankungen</div>
-        <div class="col-xs-12">ESP-Themenkurs Training bei kardio-pulmonalen Erkrankungen</div>
-        <div class="col-xs-12">TRX Sports Medicine Suspension Trainer L2</div>
+        <ul>
+            <li>ESP-Themenkurs Training bei kardio-pulmonalen Erkrankungen</li>
+            <li>TRX Sports Medicine Suspension Trainer L2</li>
+            <li>ESP-Themenkurs Training bei Diabetes, Übergewicht, Stoffwechselerkrankungen</li>
+            <li>Kinesiotaping</li>
+            <li>Myofasziale Triggerpunkt-Therapie IMTT Modul 1</li>
+            <li>Zusatzausbildung ESP Sportphysiotherapie</li>
+            <li>Zusatzausbildung in Manueller Therapie Maitland Konzept, Level 3</li>
+            <li>Diplom Physiotherapie Bethesda-Spital Basel 2003</li>
+        </ul>
     </div>
     <div class="row">
         <div class="col-xs-12">
