--- a/reto-maurer.html
+++ b/reto-maurer.html
@@ -122,34 +122,40 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">? Jahre</div>
+        <div class="col-lg-2 col-xs-3">Seit 2016</div>
+        <div class="col-xs-9">
+            Sportwissenschaftler Movimento Physio-und Trainingstherapie GmbH Oberdorf
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">Seit 2015</div>
+        <div class="col-xs-9">
+            Dozent Ausbildung FitnessinstruktorIn, Klubschule Migros Basel
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">Seit 2013</div>
+        <div class="col-xs-9">
+            Prüfungsexperte Ausbildung FitnessinstruktorIn, Klubschule Migros Basel
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">2014-2015</div>
+        <div class="col-xs-9">
+            Mitarbeiter Health &amp; Wellness Management, Credit Suisse AG Zürich
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">2011-2014</div>
+        <div class="col-xs-9">
+            Fitnessinstruktor/Sportlehrer, Sana Center SA Biel/Hirslanden Training Aarau
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3"></div>
         <div class="col-xs-9">
             Leiter bei verschiedensten Sportvereinen und Institutionen
         </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">4 Jahre</div>
-        <div class="col-xs-9">
-            Fitnessinstruktor/Sportlehrer, Sana Center SA, Biel/Hirslanden Training, Aarau
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">1 Jahr</div>
-        <div class="col-xs-9">
-            Mitarbeiter Health&Wellness Management, Credit Suisse AG, Zürich
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">seit 2013</div>
-        <div class="col-xs-9">Prüfungsexperte Ausbildung FitnessinstruktorIn, Klubschule Migros, Basel</div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">seit 2015</div>
-        <div class="col-xs-9">Dozent Ausbildung FitnessinstruktorIn, Klubschule Migros, Basel</div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">seit 2016</div>
-        <div class="col-xs-9">Sportwissenschaftler Movimento Physio-und Trainingstherapie GmbH, Oberdorf</div>
     </div>
     <div class="row section">
         <div class="col-xs-12">
@@ -157,20 +163,15 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-12">Diverse J+S-Kurse</div>
-        <div class="col-xs-12">Bachelor of Science EHSM in Sports (BSc), Eidg. Hochschule für Sport, Magglingen 2012.
-            <br/>
-            Spezialisierung: Gesundheit/Fitness; Gesundheit/Adapted Physical Activities
-        </div>
-        <div class="col-xs-12">Laktatseminare bei Ueli Schweizer</div>
-        <div class="col-xs-12">TRX Sportsmedicine Suspension Trainer L2</div>
-        <div class="col-xs-12">Functional Training Instructor; Functional Mobility Instructor; Trainer für funktionelle
-            Sportrehabilitation
-        </div>
-        <div class="col-xs-12">Erwachsenenbildner SVEB-Zertifikat 2015</div>
-        <div class="col-xs-12">Master of Science (MSc) in Sport Sciences, Option Gesundheit/Forschung, Universität
-            Fribourg, Fribourg/Magglingen 2016
-        </div>
+        <ul>
+            <li>2016 Beginn Master of Science (MSc) in Sport Sciences, Option Gesundheit/Forschung, Universität Fribourg/Magglingen</li>
+            <li>Erwachsenenbildner SVEB-Zertifikat</li>
+            <li>Functional Training Instructor; Functional Mobility Instructor; Trainer für funktionelle Sportrehabilitation</li>
+            <li>TRX Sportsmedicine Suspension Trainer L2</li>
+            <li>Laktatseminare bei Ueli Schweizer</li>
+            <li>Bachelor of Science EHSM in Sports (BSc), Eidg. Hochschule für Sport, Magglingen 2012.<br/> Spezialisierung: Gesundheit/Fitness; Gesundheit/Adapted Physical Activities </li>
+            <li>Diverse J+S-Kurse</li>
+        </ul>
     </div>
     <div class="row">
         <div class="col-xs-12">
