--- a/barbara-longo.html
+++ b/barbara-longo.html
@@ -119,26 +119,23 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">9 Jahre</div>
-        <div class="col-xs-9">
-            Kantonsspital Bruderholz mit Schwerpunkt Rückenrehabilitation, Orthopädie, Traumatologie,
-            Rheumatologie.<br/>
-            Fachbereichsverantwortung Rückenrehabilitation, Stv. Leitung gesamte Rehabilitation.
-        </div>
+        <div class="col-lg-2 col-xs-3">Seit 2016</div>
+        <div class="col-xs-9">Mitinhaberin Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">3 Jahre</div>
-        <div class="col-xs-9">
-            Berufsausübung in Privatpraxen mit Schwerpunkt Orthopädie, Traumatologie, Rheumatologie
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">6 Jahre</div>
+        <div class="col-lg-2 col-xs-3">2010-2016</div>
         <div class="col-xs-9">Selbständige Tätigkeit in Niederdorf</div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">seit 2016</div>
-        <div class="col-xs-9">Mitinhaberin Movimento Physio-und Trainingstherapie GmbH, Oberdorf</div>
+        <div class="col-lg-2 col-xs-3">2007-2010</div>
+        <div class="col-xs-9">Tätigkeit in Privatpraxen mit Schwerpunkt Orthopädie, Traumatologie, Rheumatologie</div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">1998-2007</div>
+        <div class="col-xs-9">
+            Kantonsspital Bruderholz mit Schwerpunkt Rückenrehabilitation, Orthopädie, Traumatologie, Rheumatologie.
+            Fachbereichsverantwortung Rückenrehabilitation, Stv. Leitung gesamte Rehabilitation
+        </div>
     </div>
     <div class="row section">
         <div class="col-xs-12">
@@ -146,12 +143,15 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xs-12">Diplom Physiotherapie Kantonsspital Basel 1998</div>
-        <div class="col-xs-12">Zusatzausbildung in Manueller Therapie Maitland Konzept, Level 2b</div>
-        <div class="col-xs-12">Zusatzausbildung im Umgang mit chronifizierenden Rückenschmerzen</div>
-        <div class="col-xs-12">ESP-Themenkurs Training bei Diabetes, Übergewicht, Stoffwechselerkrankungen</div>
-        <div class="col-xs-12">ESP-Themenkurs Training bei kardio-pulmonalen Erkrankungen</div>
-        <div class="col-xs-12">TRX Sports Medicine Suspension Trainer L2</div>
+        <ul>
+            <li>ESP-Themenkurs Training bei kardio-pulmonalen Erkrankungen</li>
+            <li>TRX Sports Medicine Suspension Trainer L2</li>
+            <li>ESP-Themenkurs Training bei Diabetes, Übergewicht, Stoffwechselerkrankungen</li>
+            <li>Maitland-Themenkurs: Funktionelle glenohumerale Instabilität</li>
+            <li>Zusatzausbildung im Umgang mit chronifizierenden Rückenschmerzen</li>
+            <li>Zusatzausbildung in Manueller Therapie Maitland Konzept, Level 2b</li>
+            <li>Diplom Physiotherapie Kantonsspital Basel 1998</li>
+        </ul>
     </div>
     <div class="row">
         <div class="col-xs-12">
