--- a/kontakt.html
+++ b/kontakt.html
@@ -65,7 +65,7 @@
             <h2>Anfahrt</h2>
             <div class="col-xs-12 no-gutter">
                 <div class="col-md-2 col-xs-12 no-gutter fat">Mit ÖV</div>
-                <div class="col-md-10 col-xs-12 no-gutter">Station Oberdorf (3&nbsp;min&nbsp;/&nbsp;250&nbsp;m
+                <div class="col-md-10 col-xs-12 no-gutter">Station &laquo;Oberdorf&raquo; (3&nbsp;min&nbsp;/&nbsp;250&nbsp;m
                     Fussweg)
                 </div>
                 <div class="hidden-md hidden-lg">&nbsp;</div>
@@ -82,18 +82,16 @@
                 <div class="col-md-10 col-xs-12 no-gutter">Movimento Physio-und Trainingstherapie GmbH</div>
                 <div class="hidden-md hidden-lg">&nbsp;</div>
                 <div class="col-md-2 col-xs-12 no-gutter fat">Logo</div>
-                <div class="col-md-10 col-xs-12 no-gutter">Nadja Ebner</div>
+                <div class="col-md-10 col-xs-12 no-gutter"><a href="http://woehrle.ch">Nadja Ebner-Spielmann, Werbetechnikerin</a></div>
                 <div class="hidden-md hidden-lg">&nbsp;</div>
                 <div class="col-md-2 col-xs-12 no-gutter fat">Website</div>
-                <div class="col-md-10 col-xs-12 no-gutter"><a href="http://scalable.ch">Scalable Rahel
-                    Lüthy</a></div>
+                <div class="col-md-10 col-xs-12 no-gutter"><a href="http://scalable.ch">Scalable Rahel Lüthy</a></div>
                 <div class="hidden-md hidden-lg">&nbsp;</div>
-                <div class="col-md-2 col-xs-12 no-gutter fat">Fotos</div>
-                <div class="col-md-10 col-xs-12 no-gutter">???</div>
+                <div class="col-md-2 col-xs-12 no-gutter fat">Fotografie</div>
+                <div class="col-md-10 col-xs-12 no-gutter"><a href="http://christian-aeberhard.ch">Christian Aeberhard</a></div>
                 <div class="hidden-md hidden-lg">&nbsp;</div>
                 <div class="col-md-2 col-xs-12 no-gutter fat">Kacheln</div>
-                <div class="col-md-10 col-xs-12 no-gutter"><a href="http://www.miracolour.de">MiraColour</a>
-                </div>
+                <div class="col-md-10 col-xs-12 no-gutter"><a href="http://miracolour.de">MiraColour</a></div>
                 <div class="hidden-md hidden-lg">&nbsp;</div>
                 <div class="col-md-2 col-xs-12 no-gutter fat">Icons</div>
                 <div class="col-md-10 col-xs-12 no-gutter"><a href="http://fontawesome.io">fontawesome.io</a>,
