--- a/melina-duerr.html
+++ b/melina-duerr.html
@@ -123,7 +123,7 @@
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">seit 2016</div>
-        <div class="col-xs-9">Mitinhaberin Movimento Physio- und Trainingstherapie GmbH, Oberdorf</div>
+        <div class="col-xs-9">Mitinhaberin Movimento Physio- und Trainingstherapie GmbH Oberdorf</div>
     </div>
     <div class="row">
         <div class="col-lg-2 col-xs-3">2013-2016</div>
