Preliminary opening hours

--- a/physio.html
+++ b/physio.html
@@ -130,17 +130,24 @@
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
             <h2>Geschäftsöffnungszeiten</h2>
+            <p>Ab Mo, 17. Oktober 2016 vorläufig gültig:</p>
             <table>
                 <tr>
                     <td>
-                        Mo und Do:&nbsp;<br/>
-                        Di, Mi, Fr:&nbsp;<br/>
+                        Mo:&nbsp;<br/>
+                        Di:&nbsp;<br/>
+                        Mi:&nbsp;<br/>
+                        Do:&nbsp;<br/>
+                        Fr:&nbsp;<br/>
                         Sa:&nbsp;
                     </td>
                     <td>
-                        7 – 20 Uhr<br/>
-                        8 – 21 Uhr<br/>
-                        9 – 13 Uhr
+                        07:30 – 20:00 Uhr<br/>
+                        08:00 – 21:00 Uhr<br/>
+                        14:00 – 21:00 Uhr<br/>
+                        07:30 – 20:00 Uhr<br/>
+                        08:00 – 12:00 Uhr und 15:00 – 21:00 Uhr<br/>
+                        09:00 – 13:00 Uhr
                     </td>
                 </tr>
             </table>
