More abo details

--- a/fitness.html
+++ b/fitness.html
@@ -120,15 +120,29 @@
                                     selbständig trainieren.
                                 </p>
                                 <p>
-                                    Wir werden Ihnen alle Geräte vorstellen und zusammen ein Trainingsprogramm
-                                    ausarbeiten. Nebst diesem Einführungstraining sind zwei Coachings im Abo-Preis
-                                    inbegriffen.
+                                <p>In einem Einführungstraining von 1.5 h stellen wir Ihnen alle Geräte vor und arbeiten
+                                   zusammen einen Trainingsplan aus (Kosten: Fr. 100.- in bar, wird bei Abo-Abschluss
+                                   angerechnet). Nach diesem Einführungstraining sind regelmässige Kontrolltrainings
+                                   im Abo-Preis inbegriffen.
                                 </p>
-                                <p>
-                                    Auf die Preise gewähren wir folgende Rabatte:
-                                </p>
+                                <h1>Preise</h1>
+                                <table>
+                                    <tr>
+                                        <td>24 Monate:&nbsp;</td>
+                                        <td align="right">Fr. 1380.–</td>
+                                    </tr>
+                                    <tr>
+                                        <td>12 Monate:&nbsp;</td>
+                                        <td align="right">Fr. 750.–</td>
+                                    </tr>
+                                    <tr>
+                                        <td>6 Monate:&nbsp;</td>
+                                        <td align="right">Fr. 510.–</td>
+                                    </tr>
+                                </table>
+                                <h1>Rabatte</h1>
                                 <ul>
-                                    <li>Personen im gleichen Haushalt (gegen Vorweisen eines Ausweises): 10%<br/></li>
+                                    <li>Personen im gleichen Haushalt: 10%<br/></li>
                                     <li>Studierende/Lehrlinge bis 25 Jahre (gegen Vorweisen eines Ausweises): 10%<br/></li>
                                     <li>Nahtlose Erneuerung: Fr. 20.– Reduktion</li>
                                 </ul>
