--- a/index.html
+++ b/index.html
@@ -265,6 +265,33 @@
         </div>
     </div>
     <div class="row">
+        <div class="col-sm-12">
+            <div class="new well">
+                <div class="fa-icon">
+                    <i class="icon fa-icon fa fa-calendar-check-o"></i>
+                </div>
+                <h1>Neueröffnung Oktober 2016</h1>
+                <p>Tage der offenen Tür:</p>
+                <table>
+                    <tr>
+                        <td>Fr 11. Nov:&nbsp;</td>
+                        <td align="right">15 – 20 Uhr</td>
+                    </tr>
+                    <tr>
+                        <td>Sa 12. Nov:&nbsp;</td>
+                        <td align="right">9 – 14 Uhr</td>
+                    </tr>
+                </table>
+                <div class="hidden-lg visible-sm">&nbsp;</div>
+                <div class="hidden-lg visible-sm">&nbsp;</div>
+                <div class="hidden-lg visible-xs">&nbsp;</div>
+                <a class="more" href="https://goo.gl/photos/giXixUpqZRUgd7Zf8" role="button">
+                    Entstehung/Baufortschritt&hellip;
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-sm-6">
             <div class="well">
                 <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/physio.png"/>
