Preliminary opening hours in orange

--- a/kontakt.html
+++ b/kontakt.html
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <h2>Geschäftsöffnungszeiten</h2>
-            <p>Ab Mo, 17. Oktober 2016 vorläufig gültig:</p>
+            <p class="preliminary">Ab Mo, 17. Oktober 2016 vorläufig gültig:</p>
             <table>
                 <tr>
                     <td>
