--- a/fitness.html
+++ b/fitness.html
@@ -203,7 +203,7 @@
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
             <h2>Geschäftsöffnungszeiten</h2>
-            <p>Ab Mo, 17. Oktober 2016 vorläufig gültig:</p>
+            <p class="preliminary">Ab Mo, 17. Oktober 2016 vorläufig gültig:</p>
             <table>
                 <tr>
                     <td>
