Add new physio image

--- a/physio.html
+++ b/physio.html
@@ -47,7 +47,7 @@
     </nav>
 </div>
 <div class="container-fluid banner-container">
-    <img class="banner col-xs-12" src="img/yoga.jpg"/>
+    <img class="banner col-xs-12" src="img/physio.jpg"/>
 </div>
 <div class="container-fluid">
     <div class="row">
