Betreute Zeiten Fitnessraum

--- a/fitness.html
+++ b/fitness.html
@@ -179,9 +179,12 @@
                                     betreuen wir Sie zu folgenden Zeiten spezifisch im Fitnessraum:
                                 </p>
                                 <table>
-                                    <tr><td valign="top"><b>Mo&nbsp;</b></td><td>9 - 10:30,&nbsp;</td><td>14 - 20:00</td></tr>
-                                    <tr><td valign="top"><b>Di&nbsp;</b></td><td>9 - 10:30,&nbsp;</td><td>14 - 21:00</td></tr>
-                                    <tr><td valign="top"><b>Mi&nbsp;</b></td><td align="center">&mdash;</td><td>14 - 21:00</td></tr>
+                                    <tr><td valign="top"><b>Mo&nbsp;</b></td><td>12 – 20 Uhr</td></tr>
+                                    <tr><td valign="top"><b>Di&nbsp;</b></td><td>14 – 21 Uhr</td></tr>
+                                    <tr><td valign="top"><b>Mi&nbsp;</b></td><td>14 – 21 Uhr</td></tr>
+                                    <tr><td valign="top"><b>Do&nbsp;</b></td><td>–</td></tr>
+                                    <tr><td valign="top"><b>Fr&nbsp;</b></td><td>10 – 12 Uhr</td></tr>
+                                    <tr><td valign="top"><b>Sa&nbsp;</b></td><td>9 – 13 Uhr</td></tr>
                                 </table>
                             </div>
                             <div class="modal-footer">
