Add new portraits

--- a/melina-duerr.html
+++ b/melina-duerr.html
@@ -105,7 +105,7 @@
         </div>
     </div>
     <div class="row section">
-        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/arizona.jpg"/>
+        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/melina.jpg"/>
         <div class="col-lg-10 col-sm-6 col-xs-12">
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
