--- a/team.html
+++ b/team.html
@@ -118,7 +118,7 @@
                         Mehr&hellip;
                     </a>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/april.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/barbara.jpg">
             </div>
         </div>
         <div class="col-sm-6 col-xs-12">
@@ -134,7 +134,7 @@
                         Mehr&hellip;
                     </a>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/arizona.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/melina.jpg">
             </div>
         </div>
     </div>
@@ -152,7 +152,35 @@
                         Mehr&hellip;
                     </a>
                 </div>
-                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/alex.jpg">
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/reto.jpg">
+            </div>
+        </div>
+        <div class="col-sm-6 col-xs-12">
+            <div class="portrait-well">
+                <div class="col-md-5 col-xs-12">
+                    <p>
+                    <h1>Vera&nbsp;Schmidt</h1>
+                    <p>
+                        Physiotherapeutin i.A.<br/>
+                        <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
+                    </p>
+                </div>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/vera.jpg">
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6 col-xs-12">
+            <div class="portrait-well">
+                <div class="col-md-5 col-xs-12">
+                    <p>
+                    <h1>Nazmije&nbsp;Demusi</h1>
+                    <p>
+                        Raumpflegerin<br/>
+                        <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
+                    </p>
+                </div>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/nazmije.jpg">
             </div>
         </div>
     </div>
