Fix wrapping of opening hours

--- a/index.html
+++ b/index.html
@@ -324,14 +324,14 @@
             </p>
             <h2>Geschäftsöffnungszeiten</h2>
             <p class="preliminary">Ab Mo, 17. Oktober 2016 vorläufig gültig:</p>
-            <table>
+            <table class="opening-hours">
                 <tr>
                     <td>
                         Mo:&nbsp;<br/>
                         Di:&nbsp;<br/>
                         Mi:&nbsp;<br/>
                         Do:&nbsp;<br/>
-                        Fr:&nbsp;<br/>
+                        Fr:&nbsp;<br/><br/>
                         Sa:&nbsp;
                     </td>
                     <td>
