--- a/reto-maurer.html
+++ b/reto-maurer.html
@@ -188,14 +188,14 @@
             </p>
             <h2>Geschäftsöffnungszeiten</h2>
             <p class="preliminary">Ab Mo, 17. Oktober 2016 vorläufig gültig:</p>
-            <table class="opening-hours">
+            <table>
                 <tr>
                     <td>
                         Mo:&nbsp;<br/>
                         Di:&nbsp;<br/>
                         Mi:&nbsp;<br/>
                         Do:&nbsp;<br/>
-                        Fr:&nbsp;<br/><br/>
+                        Fr:&nbsp;<br/>
                         Sa:&nbsp;
                     </td>
                     <td>
