--- a/team.html
+++ b/team.html
@@ -198,15 +198,15 @@
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
             <h2>Geschäftsöffnungszeiten</h2>
-            <div class="preliminary">Ab Mo, 17. Oktober 2016 vorläufig gültig:</div>
-            <table class="opening-hours">
+            <p class="preliminary">Ab Mo, 17. Oktober 2016 vorläufig gültig:</p>
+            <table>
                 <tr>
                     <td>
                         Mo:&nbsp;<br/>
                         Di:&nbsp;<br/>
                         Mi:&nbsp;<br/>
                         Do:&nbsp;<br/>
-                        Fr:&nbsp;<br/><br/>
+                        Fr:&nbsp;<br/>
                         Sa:&nbsp;
                     </td>
                     <td>
