Prevent opening hours from wrapping

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                         Fr:&nbsp;<br/>
                         Sa:&nbsp;
                     </td>
-                    <td>
+                    <td nowrap="true"><!-- TODO: Proper alignment -->
                         07:30 – 20:00 Uhr<br/>
                         08:00 – 21:00 Uhr<br/>
                         14:00 – 21:00 Uhr<br/>
