--- a/kontakt.html
+++ b/kontakt.html
@@ -113,7 +113,7 @@
                         Fr:&nbsp;<br/>
                         Sa:&nbsp;
                     </td>
-                    <td>
+                    <td nowrap="true"><!-- TODO: Proper alignment -->
                         07:30 – 20:00 Uhr<br/>
                         08:00 – 21:00 Uhr<br/>
                         14:00 – 21:00 Uhr<br/>
