Melina's last minute edits

--- a/physio.html
+++ b/physio.html
@@ -55,7 +55,7 @@
         <div class="section col-xs-12">
             <h1>Physiotherapie</h1>
             <p>
-                Physiotherapie bietet eine Vielzahl von Methoden, die alle darauf zielen, Beeinträchtigungen des
+                Physiotherapie bietet eine Vielzahl von Methoden, die unter anderem darauf zielen, Beeinträchtigungen des
                 Bewegungsapparates zu reduzieren.
             </p>
             <p>
