--- a/reto-maurer.html
+++ b/reto-maurer.html
@@ -111,7 +111,7 @@
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Reto&nbsp;Maurer</h2>
             <p>
-                Sportwissenschaftler<br/>
+                Sportwissenschaftler&nbsp;EHSM<br/>
                 <a href="mailto:reto.maurer@physiomovimento.ch">reto.maurer@physiomovimento.ch</a>
             </p>
         </div>
