--- a/team.html
+++ b/team.html
@@ -145,7 +145,7 @@
                     <p>
                     <h1>Reto&nbsp;Maurer</h1>
                     <p>
-                        Sportwissenschaftler<br/>
+                        Sportwissenschaftler&nbsp;EHSM<br/>
                         <a href="mailto:reto.maurer@physiomovimento.ch">reto.maurer@physiomovimento.ch</a>
                     </p>
                     <a href="reto-maurer.html" role="button">
