--- a/fitness.html
+++ b/fitness.html
@@ -120,9 +120,8 @@
                                     selbständig trainieren.
                                 </p>
                                 <p>In einem Einführungstraining von 1.5 h stellen wir Ihnen alle Geräte vor und arbeiten
-                                   zusammen einen Trainingsplan aus (Kosten: Fr. 100.- in bar, wird bei Abo-Abschluss
-                                   angerechnet). Nach diesem Einführungstraining sind regelmässige Kontrolltrainings
-                                   im Abo-Preis inbegriffen.
+                                   zusammen einen Trainingsplan aus. Nach diesem ersten Training sind regelmässige
+                                    Kontrolltrainings im Abo-Preis inbegriffen.
                                 </p>
                                 <h1>Preise</h1>
                                 <table>
@@ -139,11 +138,13 @@
                                         <td align="right">Fr. 510.–</td>
                                     </tr>
                                 </table>
-                                <h1>Rabatte</h1>
+                                <h1>Rabatte/Unkosten</h1>
                                 <ul>
                                     <li>Personen im gleichen Haushalt: 10%<br/></li>
                                     <li>Studierende/Lehrlinge bis 25 Jahre (gegen Vorweisen eines Ausweises): 10%<br/></li>
                                     <li>Nahtlose Erneuerung: Fr. 20.– Reduktion</li>
+                                    <li>Wird nach dem Einführungstraining kein Abo abgeschlossen, verrechnen wir einen
+                                        Unkostenbeitrag von Fr. 100.–</li>
                                 </ul>
                             </div>
                             <div class="modal-footer">
