--- a/fitness.html
+++ b/fitness.html
@@ -101,6 +101,10 @@
                         <td>6 Monate:&nbsp;</td>
                         <td align="right">Fr. 510.–</td>
                     </tr>
+                    <tr>
+                        <td>3 Monate:&nbsp;</td>
+                        <td align="right">Fr. 380.–</td>
+                    </tr>
                 </table>
                 <br/>
                 <a class="more" href="#" role="button" data-toggle="modal" data-target="#aboDetails">
@@ -137,12 +141,17 @@
                                         <td>6 Monate:&nbsp;</td>
                                         <td align="right">Fr. 510.–</td>
                                     </tr>
+                                    <tr>
+                                        <td>3 Monate:&nbsp;</td>
+                                        <td align="right">Fr. 380.–</td>
+                                    </tr>
                                 </table>
-                                <h1>Rabatte/Unkosten</h1>
+                                <h1>Bedingungen</h1>
                                 <ul>
-                                    <li>Personen im gleichen Haushalt: 10%<br/></li>
-                                    <li>Studierende/Lehrlinge bis 25 Jahre (gegen Vorweisen eines Ausweises): 10%<br/></li>
+                                    <li>Vermittlungsrabatt: 10%<br/></li>
                                     <li>Nahtlose Erneuerung: Fr. 20.– Reduktion</li>
+                                    <li>Jugendliche bis 25 Jahre (gegen Vorweisen eines Ausweises): 10%<br/></li>
+                                    <li>Mindestalter 16 Jahre</li>
                                     <li>Wird nach dem Einführungstraining kein Abo abgeschlossen, verrechnen wir einen
                                         Unkostenbeitrag von Fr. 100.–</li>
                                 </ul>
