Reverse price list, Azubis

--- a/fitness.html
+++ b/fitness.html
@@ -90,20 +90,20 @@
                 <h1>Abo</h1>
                 <table>
                     <tr>
-                        <td>24 Monate:&nbsp;</td>
-                        <td align="right">Fr. 1380.–</td>
-                    </tr>
-                    <tr>
-                        <td>12 Monate:&nbsp;</td>
-                        <td align="right">Fr. 750.–</td>
+                        <td>3 Monate:&nbsp;</td>
+                        <td align="right">Fr. 380.–</td>
                     </tr>
                     <tr>
                         <td>6 Monate:&nbsp;</td>
                         <td align="right">Fr. 510.–</td>
                     </tr>
                     <tr>
-                        <td>3 Monate:&nbsp;</td>
-                        <td align="right">Fr. 380.–</td>
+                        <td>12 Monate:&nbsp;</td>
+                        <td align="right">Fr. 750.–</td>
+                    </tr>
+                    <tr>
+                        <td>24 Monate:&nbsp;</td>
+                        <td align="right">Fr. 1380.–</td>
                     </tr>
                 </table>
                 <br/>
@@ -130,27 +130,27 @@
                                 <h1>Preise</h1>
                                 <table>
                                     <tr>
-                                        <td>24 Monate:&nbsp;</td>
-                                        <td align="right">Fr. 1380.–</td>
-                                    </tr>
-                                    <tr>
-                                        <td>12 Monate:&nbsp;</td>
-                                        <td align="right">Fr. 750.–</td>
+                                        <td>3 Monate:&nbsp;</td>
+                                        <td align="right">Fr. 380.–</td>
                                     </tr>
                                     <tr>
                                         <td>6 Monate:&nbsp;</td>
                                         <td align="right">Fr. 510.–</td>
                                     </tr>
                                     <tr>
-                                        <td>3 Monate:&nbsp;</td>
-                                        <td align="right">Fr. 380.–</td>
+                                        <td>12 Monate:&nbsp;</td>
+                                        <td align="right">Fr. 750.–</td>
+                                    </tr>
+                                    <tr>
+                                        <td>24 Monate:&nbsp;</td>
+                                        <td align="right">Fr. 1380.–</td>
                                     </tr>
                                 </table>
                                 <h1>Bedingungen</h1>
                                 <ul>
                                     <li>Vermittlungsrabatt: 10%<br/></li>
                                     <li>Nahtlose Erneuerung: Fr. 20.– Reduktion</li>
-                                    <li>Jugendliche bis 25 Jahre (gegen Vorweisen eines Ausweises): 10%<br/></li>
+                                    <li>Auszubildende bis 25 Jahre (gegen Vorweisen eines Ausweises): 10%<br/></li>
                                     <li>Mindestalter 16 Jahre</li>
                                     <li>Wird nach dem Einführungstraining kein Abo abgeschlossen, verrechnen wir einen
                                         Unkostenbeitrag von Fr. 100.–</li>
