--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script src="https://use.fontawesome.com/6935404a48.js"></script>
 </head>
 <body>
 <div class="tile"></div>
@@ -265,29 +266,30 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-6">
             <div class="new well">
-                <div class="fa-icon">
-                    <i class="icon fa-icon fa fa-calendar-check-o"></i>
-                </div>
-                <h1>Neueröffnung Oktober 2016</h1>
-                <p>Tage der offenen Tür:</p>
-                <table>
-                    <tr>
-                        <td>Fr 11. Nov:&nbsp;</td>
-                        <td align="right">15 – 20 Uhr</td>
-                    </tr>
-                    <tr>
-                        <td>Sa 12. Nov:&nbsp;</td>
-                        <td align="right">9 – 14 Uhr</td>
-                    </tr>
-                </table>
-                <div class="hidden-lg visible-sm">&nbsp;</div>
-                <div class="hidden-lg visible-sm">&nbsp;</div>
-                <div class="hidden-lg visible-xs">&nbsp;</div>
+                <h1>Weihnachtszauber</h1>
+                <p>Am Sonntag, 18.12. öffnen wir von 11 – 17 Uhr unsere Türen. Schauen Sie rein!</p>
                 <a class="more" href="https://goo.gl/photos/giXixUpqZRUgd7Zf8" role="button">
                     Entstehung/Baufortschritt&hellip;
                 </a>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="new well">
+                <h1>Wettbewerb</h1>
+                <p>Wir gratulieren folgenden Gewinnerinnen:</p>
+                <table>
+                    <tr>
+                        <td>Nicole Schäublin, Niederdorf</td>
+                    </tr>
+                    <tr>
+                        <td>Dora Jörin, Niederdorf</td>
+                    </tr>
+                    <tr>
+                        <td>Denise Schweizer, Oberdorf</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
