Update opening hours

--- a/physio.html
+++ b/physio.html
@@ -130,7 +130,7 @@
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
             <h2>Geschäftsöffnungszeiten</h2>
-            <p class="preliminary">Ab Mo, 17. Oktober 2016 vorläufig gültig:</p>
+            <p class="preliminary">Ab 07. Dezember 2016 am Mi durchgehend von 8 – 21 Uhr</p>
             <table>
                 <tr>
                     <td>
