--- a/index.html
+++ b/index.html
@@ -281,13 +281,13 @@
                 <p>Wir gratulieren folgenden Gewinnerinnen:</p>
                 <table>
                     <tr>
-                        <td>Nicole Schäublin, Niederdorf</td>
+                        <td>Nicole Schäublin</td>
                     </tr>
                     <tr>
-                        <td>Dora Jörin, Niederdorf</td>
+                        <td>Dora Jörin</td>
                     </tr>
                     <tr>
-                        <td>Denise Schweizer, Oberdorf</td>
+                        <td>Denise Schweizer</td>
                     </tr>
                 </table>
             </div>
