--- a/index.html
+++ b/index.html
@@ -278,7 +278,8 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Wettbewerb</h1>
-                <p>Wir gratulieren folgenden Gewinnerinnen:</p>
+                <p>Folgende Gewinnerinnen haben am Tag der offenen Tür ein <span style="white-space: pre;">
+                    3-Monats-Abo</span> gewonnen – wir gratulieren!</p>
                 <table>
                     <tr>
                         <td>Nicole Schäublin</td>
