--- a/kontakt.html
+++ b/kontakt.html
@@ -47,7 +47,7 @@
 </div>
 <div class="container-fluid banner-container">
     <div class="map col-xs-12 no-gutter">
-        <iframe class="banner col-xs-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2700.8988571061323!2d7.746460815359772!3d47.3944062791712!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4791cce863b206ef%3A0xce7a334b71eb17f5!2sUeli+Schadweg+3%2C+4436+Oberdorf!5e0!3m2!1sde!2sch!4v1475671091422" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe class="banner col-xs-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2700.89867098109!2d7.746460815281682!3d47.39440991060558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4791cce863b206ef%3A0x897a1a437af2ea54!2sMovimento+Physio-+und+Trainingstherapie+GmbH!5e0!3m2!1sde!2sch!4v1480773955964" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 </div>
 <div class="container-fluid">
