Add jcarousel with physio and fitness images

--- a/physio.html
+++ b/physio.html
@@ -12,6 +12,7 @@
 
     <link href="css/bootstrap-custom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/jcarousel-responsive.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Maven+Pro:400,700' rel='stylesheet' type='text/css'>
 
     <script type="text/javascript" src="js/d3-3.5.16.min.js"></script>
@@ -46,8 +47,21 @@
         </div>
     </nav>
 </div>
-<div class="container-fluid banner-container">
-    <img class="banner col-xs-12" src="img/physio.jpg"/>
+<div class="jcarousel-wrapper">
+    <div class="jcarousel">
+        <ul>
+            <li><img src="img/physio2.jpeg" alt="Physiotherapie Momentaufnahme 2"></li>  
+            <li><img src="img/physio1.jpeg" alt="Physiotherapie Momentaufnahme 1"></li>
+            <li><img src="img/physio3.jpeg" alt="Physiotherapie Momentaufnahme 3"></li>                                  
+            <li><img src="img/physio6.jpeg" alt="Physiotherapie Momentaufnahme 6"></li>
+            <li><img src="img/physio4.jpeg" alt="Physiotherapie Momentaufnahme 4"></li>
+            <li><img src="img/physio5.jpeg" alt="Physiotherapie Momentaufnahme 5"></li>            
+            <!--li><img src="img/physio7.jpeg" alt="Physiotherapie Momentaufnahme 1 7"></li-->
+        </ul>
+    </div>
+    <a href="#" class="jcarousel-control-prev">&lsaquo;</a>
+    <a href="#" class="jcarousel-control-next">&rsaquo;</a>
+    <p class="jcarousel-pagination"></p>
 </div>
 <div class="container-fluid">
     <div class="row">
@@ -176,6 +190,9 @@
 </script>
 
 <script src="js/jquery.min.js"></script>
+<script src="js/jquery.jcarousel.min.js"></script>
+<script src="js/jcarousel.responsive.js"></script>
 <script src="js/bootstrap.min.js"></script>
+
 
 </html>
