--- a/fitness.html
+++ b/fitness.html
@@ -12,6 +12,7 @@
 
     <link href="css/bootstrap-custom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/jcarousel-responsive.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Maven+Pro:400,700' rel='stylesheet' type='text/css'>
 
     <script type="text/javascript" src="js/d3-3.5.16.min.js"></script>
@@ -46,8 +47,21 @@
         </div>
     </nav>
 </div>
-<div class="container-fluid banner-container">
-    <img class="banner col-xs-12" src="img/dumbbells.jpg"/>
+<div class="jcarousel-wrapper">
+    <div class="jcarousel">
+        <ul>
+            <li><img src="img/fitness4.jpeg" alt="Fitness Momentaufnahme 4"></li>
+            <li><img src="img/fitness6.jpeg" alt="Fitness Momentaufnahme 6"></li>
+            <li><img src="img/fitness1.jpeg" alt="Fitness Momentaufnahme 1"></li>
+            <li><img src="img/fitness2.jpeg" alt="Fitness Momentaufnahme 2"></li>
+            <li><img src="img/fitness3.jpeg" alt="Fitness Momentaufnahme 3"></li>            
+            <li><img src="img/fitness5.jpeg" alt="Fitness Momentaufnahme 5"></li>            
+            <li><img src="img/fitness7.jpeg" alt="Fitness Momentaufnahme 7"></li>
+        </ul>
+    </div>
+    <a href="#" class="jcarousel-control-prev">&lsaquo;</a>
+    <a href="#" class="jcarousel-control-next">&rsaquo;</a>
+    <p class="jcarousel-pagination"></p>
 </div>
 <div class="container-fluid">
     <div class="row">
@@ -261,6 +275,8 @@
 </script>
 
 <script src="js/jquery.min.js"></script>
+<script src="js/jquery.jcarousel.min.js"></script>
+<script src="js/jcarousel.responsive.js"></script>
 <script src="js/bootstrap.min.js"></script>
 
 </html>
