Add opening hours during holidays

--- a/index.html
+++ b/index.html
@@ -317,6 +317,32 @@
             </div>
         </div>
         <div class="footer col-xs-12">
+            <h2>Spezielle Öffnungszeiten über die Festtage</h2>
+            <table>
+                <tr>
+                    <td>
+                        Sa, 24.12.:&nbsp;<br/>
+                        Mo, 26.12.:&nbsp;<br/>
+                        Di, 27.12.:&nbsp;<br/>
+                        Mi, 28.12.:&nbsp;<br/>
+                        Do, 29.12.:&nbsp;<br/>
+                        Fr, 30.12.:&nbsp;<br/>
+                        Sa, 31.12.:&nbsp;<br/>
+                        Mo, 02.01.:&nbsp;
+                    </td>
+                    <td nowrap="true"><!-- TODO: Proper alignment -->
+                        geschlossen<br/>
+                        geschlossen<br/>
+                        09:00 - 17:00 Uhr<br/>
+                        08:00 – 14:00 Uhr (ohne Betreuung)<br/>
+                        09:00 - 15:00 Uhr<br/>
+                        09:00 - 17:00 Uhr (Fitness: 09:00 - 11:00 ohne Betreuung)<br/>
+                        geschlossen<br/>
+                        geschlossen
+                    </td>
+                </tr>
+            </table>
+            <p class="preliminary">Ab Di, 3.1.2017 gelten wieder die normalen Öffnungszeiten. <br/>Wir wünschen allen fröhliche Weihnachten und ein gesundes neues Jahr!</p>
             <h2>Kontakt</h2>
             <p>
                 Movimento Physio-und Trainingstherapie GmbH<br/>
@@ -325,7 +351,7 @@
                 061 963 00 23<br/>
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
-            <h2>Geschäftsöffnungszeiten</h2>
+            <h2>Allgemeine Geschäftsöffnungszeiten</h2>
             <p class="preliminary">Ab 07. Dezember 2016 am Mi durchgehend von 8 – 21 Uhr</p>
             <table>
                 <tr>
@@ -346,7 +372,7 @@
                         09:00 – 13:00 Uhr
                     </td>
                 </tr>
-            </table>
+            </table>            
         </div>
     </div>
 </div>
