Improve mobile rendering

--- a/index.html
+++ b/index.html
@@ -321,22 +321,22 @@
             <table>
                 <tr>
                     <td>
-                        Sa, 24.12.:&nbsp;<br/>
-                        Mo, 26.12.:&nbsp;<br/>
-                        Di, 27.12.:&nbsp;<br/>
-                        Mi, 28.12.:&nbsp;<br/>
-                        Do, 29.12.:&nbsp;<br/>
-                        Fr, 30.12.:&nbsp;<br/>
-                        Sa, 31.12.:&nbsp;<br/>
-                        Mo, 02.01.:&nbsp;
+                        24.12.:&nbsp;<br/>
+                        26.12.:&nbsp;<br/>
+                        27.12.:&nbsp;<br/>
+                        28.12.:&nbsp;<br/><br/>
+                        29.12.:&nbsp;<br/>
+                        30.12.:&nbsp;<br/><br/>
+                        31.12.:&nbsp;<br/>
+                        02.01.:&nbsp;
                     </td>
                     <td nowrap="true"><!-- TODO: Proper alignment -->
                         geschlossen<br/>
                         geschlossen<br/>
                         09:00 - 17:00 Uhr<br/>
-                        08:00 – 14:00 Uhr (ohne Betreuung)<br/>
+                        08:00 – 14:00 Uhr<br/>(ohne Betreuung)<br/>
                         09:00 - 15:00 Uhr<br/>
-                        09:00 - 17:00 Uhr (Fitness: 09:00 - 11:00 ohne Betreuung)<br/>
+                        09:00 - 17:00 Uhr<br/>(09:00 - 11:00 ohne Betreuung)<br/>
                         geschlossen<br/>
                         geschlossen
                     </td>
