Re-organize table

--- a/index.html
+++ b/index.html
@@ -320,29 +320,40 @@
             <h2>Spezielle Öffnungszeiten über die Festtage</h2>
             <table>
                 <tr>
-                    <td>
-                        24.12.:&nbsp;<br/>
-                        26.12.:&nbsp;<br/>
-                        27.12.:&nbsp;<br/>
-                        28.12.:&nbsp;<br/><br/>
-                        29.12.:&nbsp;<br/>
-                        30.12.:&nbsp;<br/><br/>
-                        31.12.:&nbsp;<br/>
-                        02.01.:&nbsp;
-                    </td>
-                    <td nowrap="true"><!-- TODO: Proper alignment -->
-                        geschlossen<br/>
-                        geschlossen<br/>
-                        09:00 - 17:00 Uhr<br/>
-                        08:00 – 14:00 Uhr<br/>(ohne Betreuung)<br/>
-                        09:00 - 15:00 Uhr<br/>
-                        09:00 - 17:00 Uhr<br/>(09:00 - 11:00 ohne Betreuung)<br/>
-                        geschlossen<br/>
-                        geschlossen
-                    </td>
+                    <td nowrap='true'>Sa, 24.12.:</td>
+                    <td>geschlossen
+                    
+                </tr>
+                <tr>
+                    <td nowrap='true'>Mo, 26.12.:</td>
+                    <td>geschlossen</td>
+                </tr>
+                <tr>
+                    <td nowrap='true'>Di, 27.12.:</td>
+                    <td>09:00 - 17:00 Uhr</td>
+                </tr>
+                <tr>
+                    <td nowrap='true'>Mi, 28.12.:</td>
+                    <td>08:00 – 14:00 Uhr (ohne Betreuung)</td>
+                </tr>
+                <tr>                    
+                    <td nowrap='true'>Do, 29.12.:</td>
+                    <td>09:00 - 15:00 Uhr</td>
+                </tr>
+                <tr>
+                    <td nowrap='true'>Fr, 30.12.:</td>
+                    <td>09:00 - 17:00 Uhr (09:00 - 11:00 ohne Betreuung)</td>
+                </tr>
+                <tr>
+                    <td nowrap='true'>Sa, 31.12.:</td>
+                    <td>geschlossen</td>
+                </tr>
+                <tr>
+                    <td nowrap='true'>Mo, 02.01.:</td>
+                    <td>geschlossen</td>
                 </tr>
             </table>
-            <p class="preliminary">Ab Di, 3.1.2017 gelten wieder die normalen Öffnungszeiten. <br/>Wir wünschen allen fröhliche Weihnachten und ein gesundes neues Jahr!</p>
+            <p class="preliminary">Ab Di, 3.1.2017 gelten wieder die normalen Öffnungszeiten.<br/><br/>Wir wünschen allen fröhliche Weihnachten und ein gesundes neues Jahr!</p>
             <h2>Kontakt</h2>
             <p>
                 Movimento Physio-und Trainingstherapie GmbH<br/>
