Add link to Google Photos Album, change pic order, add new pic

--- a/fitness.html
+++ b/fitness.html
@@ -47,22 +47,24 @@
         </div>
     </nav>
 </div>
-<div class="jcarousel-wrapper">
-    <div class="jcarousel">
-        <ul>
-            <li><img src="img/fitness4.jpeg" alt="Fitness Momentaufnahme 4"></li>
-            <li><img src="img/fitness6.jpeg" alt="Fitness Momentaufnahme 6"></li>
-            <li><img src="img/fitness1.jpeg" alt="Fitness Momentaufnahme 1"></li>
-            <li><img src="img/fitness2.jpeg" alt="Fitness Momentaufnahme 2"></li>
-            <li><img src="img/fitness3.jpeg" alt="Fitness Momentaufnahme 3"></li>            
-            <li><img src="img/fitness5.jpeg" alt="Fitness Momentaufnahme 5"></li>            
-            <li><img src="img/fitness7.jpeg" alt="Fitness Momentaufnahme 7"></li>
-        </ul>
+<a href="https://goo.gl/photos/zs2VspYAjVQJttVw9" target="_blank">
+    <div class="jcarousel-wrapper">
+        <div class="jcarousel">
+            <ul>                
+                <li><img src="img/fitness6.jpeg" alt="Fitness Momentaufnahme 6"></li>
+                <li><img src="img/fitness1.jpeg" alt="Fitness Momentaufnahme 1"></li>
+                <li><img src="img/fitness2.jpeg" alt="Fitness Momentaufnahme 2"></li>
+                <li><img src="img/fitness3.jpeg" alt="Fitness Momentaufnahme 3"></li>            
+                <li><img src="img/fitness5.jpeg" alt="Fitness Momentaufnahme 5"></li>            
+                <li><img src="img/fitness7.jpeg" alt="Fitness Momentaufnahme 7"></li>
+                <li><img src="img/fitness4.jpeg" alt="Fitness Momentaufnahme 4"></li>
+            </ul>
+        </div>
+        <a href="#" class="jcarousel-control-prev">&lsaquo;</a>
+        <a href="#" class="jcarousel-control-next">&rsaquo;</a>
+        <p class="jcarousel-pagination"></p>
     </div>
-    <a href="#" class="jcarousel-control-prev">&lsaquo;</a>
-    <a href="#" class="jcarousel-control-next">&rsaquo;</a>
-    <p class="jcarousel-pagination"></p>
-</div>
+</a>
 <div class="container-fluid">
     <div class="row">
         <div class="section col-xs-12">
